[package]
name = "tapo-camera-privacy-control"
version = "0.1.0"
edition = "2021"
description = "A lightweight Rust library and binary to control Tapo camera privacy mode via local LAN."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["tapo", "camera", "privacy", "iot"]
categories = ["network-programming", "hardware-support"]
authors = ["Michel Pastor <shellixyz@gmail.com>"]
repository = "https://github.com/shellixyz/tapo-camera-privacy-control"
homepage = "https://github.com/shellixyz/tapo-camera-privacy-control"
documentation = "https://docs.rs/tapo-camera-privacy-control"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
md-5 = "0.10.6"
sha2 = "0.10.9"
aes = "0.8.4"
cbc = "0.1.2"
base64 = "0.22"
rand = "0.10.0"
clap = { version = "4.6.0", features = ["derive", "env"] }
anyhow = "1.0.102"
